updated member profiles

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -31,6 +31,8 @@ undergraduate:
     - name: David Lam
     - name: Mansoor Abid
     - name: Faizan Khan
+      linkedin: https://www.linkedin.com/in/faizan-khan234
+      github: https://github.com/jellyfishing2346
     - name: Sagor Sutra Dhor
 alumni:
   master:
